--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.epam</groupId>
-    <artifactId>AndroidGmail</artifactId>
+    <artifactId>AndroidChrome</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -46,7 +46,7 @@
                 <version>2.20.1</version>
                 <configuration>
                     <includes>
-                        <include>TestGmail.java</include>
+                        <include>TestChrome.java</include>
                     </includes>
                 </configuration>
             </plugin>
